--- a/en/crowd-kit/reference/toc.yaml
+++ b/en/crowd-kit/reference/toc.yaml
@@ -1,26 +1,7 @@
-title: Crowd-Kit Reference
+title: Crowd-Kit Aggregations
 items:
-- name: Aggregations
-  expanded: true
+- name: Classification
   items:
-  - name: BradleyTerry
-    items:
-    - name: Overview
-      href: crowdkit.aggregation.pairwise.bradley_terry.BradleyTerry.md
-    - name: fit
-      href: crowdkit.aggregation.pairwise.bradley_terry.BradleyTerry.fit.md
-    - name: fit_predict
-      href: crowdkit.aggregation.pairwise.bradley_terry.BradleyTerry.fit_predict.md
-  - name: ClosestToAverage
-    items:
-    - name: Overview
-      href: crowdkit.aggregation.embeddings.closest_to_average.ClosestToAverage.md
-    - name: fit
-      href: crowdkit.aggregation.embeddings.closest_to_average.ClosestToAverage.fit.md
-    - name: fit_predict
-      href: crowdkit.aggregation.embeddings.closest_to_average.ClosestToAverage.fit_predict.md
-    - name: fit_predict_scores
-      href: crowdkit.aggregation.embeddings.closest_to_average.ClosestToAverage.fit_predict_scores.md
   - name: DawidSkene
     items:
     - name: Overview
@@ -55,27 +36,6 @@ items:
       href: crowdkit.aggregation.classification.gold_majority_vote.GoldMajorityVote.predict.md
     - name: predict_proba
       href: crowdkit.aggregation.classification.gold_majority_vote.GoldMajorityVote.predict_proba.md
-  - name: HRRASA
-    items:
-    - name: Overview
-      href: crowdkit.aggregation.embeddings.hrrasa.HRRASA.md
-    - name: fit
-      href: crowdkit.aggregation.embeddings.hrrasa.HRRASA.fit.md
-    - name: fit_predict
-      href: crowdkit.aggregation.embeddings.hrrasa.HRRASA.fit_predict.md
-    - name: fit_predict_scores
-      href: crowdkit.aggregation.embeddings.hrrasa.HRRASA.fit_predict_scores.md
-    - name: glue_similarity
-      href: crowdkit.aggregation.embeddings.hrrasa.glue_similarity.md
-      hidden: true
-  - name: TextHRRASA
-    items:
-    - name: Overview
-      href: crowdkit.aggregation.texts.text_hrrasa.TextHRRASA.md
-    - name: fit_predict
-      href: crowdkit.aggregation.texts.text_hrrasa.TextHRRASA.fit_predict.md
-    - name: fit_predict_scores
-      href: crowdkit.aggregation.texts.text_hrrasa.TextHRRASA.fit_predict_scores.md
   - name: MMSR
     items:
     - name: Overview
@@ -100,72 +60,6 @@ items:
       href: crowdkit.aggregation.classification.majority_vote.MajorityVote.fit_predict.md
     - name: fit_predict_proba
       href: crowdkit.aggregation.classification.majority_vote.MajorityVote.fit_predict_proba.md
-  - name: NoisyBradleyTerry
-    items:
-    - name: Overview
-      href: crowdkit.aggregation.pairwise.noisy_bt.NoisyBradleyTerry.md
-    - name: fit
-      href: crowdkit.aggregation.pairwise.noisy_bt.NoisyBradleyTerry.fit.md
-    - name: fit_predict
-      href: crowdkit.aggregation.pairwise.noisy_bt.NoisyBradleyTerry.fit_predict.md
-  - name: RASA
-    items:
-    - name: Overview
-      href: crowdkit.aggregation.embeddings.rasa.RASA.md
-    - name: fit
-      href: crowdkit.aggregation.embeddings.rasa.RASA.fit.md
-    - name: fit_predict
-      href: crowdkit.aggregation.embeddings.rasa.RASA.fit_predict.md
-    - name: fit_predict_scores
-      href: crowdkit.aggregation.embeddings.rasa.RASA.fit_predict_scores.md
-  - name: TextRASA
-    items:
-    - name: Overview
-      href: crowdkit.aggregation.texts.text_rasa.TextRASA.md
-    - name: fit
-      href: crowdkit.aggregation.texts.text_rasa.TextRASA.fit.md
-    - name: fit_predict
-      href: crowdkit.aggregation.texts.text_rasa.TextRASA.fit_predict.md
-    - name: fit_predict_scores
-      href: crowdkit.aggregation.texts.text_rasa.TextRASA.fit_predict_scores.md
-  - name: ROVER
-    items:
-    - name: Overview
-      href: crowdkit.aggregation.texts.rover.ROVER.md
-    - name: fit
-      href: crowdkit.aggregation.texts.rover.ROVER.fit.md
-    - name: fit_predict
-      href: crowdkit.aggregation.texts.rover.ROVER.fit_predict.md
-  - name: SegmentationEM
-    items:
-    - name: Overview
-      href: crowdkit.aggregation.image_segmentation.segmentation_em.SegmentationEM.md
-    - name: fit
-      href: crowdkit.aggregation.image_segmentation.segmentation_em.SegmentationEM.fit.md
-    - name: fit_predict
-      href: crowdkit.aggregation.image_segmentation.segmentation_em.SegmentationEM.fit_predict.md
-  - name: SegmentationMajorityVote
-    items:
-    - name: Overview
-      href: crowdkit.aggregation.image_segmentation.segmentation_majority_vote.SegmentationMajorityVote.md
-    - name: fit
-      href: crowdkit.aggregation.image_segmentation.segmentation_majority_vote.SegmentationMajorityVote.fit.md
-    - name: fit_predict
-      href: crowdkit.aggregation.image_segmentation.segmentation_majority_vote.SegmentationMajorityVote.fit_predict.md
-  - name: SegmentationRASA
-    items:
-    - name: Overview
-      href: crowdkit.aggregation.image_segmentation.segmentation_rasa.SegmentationRASA.md
-    - name: fit
-      href: crowdkit.aggregation.image_segmentation.segmentation_rasa.SegmentationRASA.fit.md
-    - name: fit_predict
-      href: crowdkit.aggregation.image_segmentation.segmentation_rasa.SegmentationRASA.fit_predict.md
-  - name: TextSummarization
-    items:
-    - name: Overview
-      href: crowdkit.aggregation.texts.text_summarization.TextSummarization.md
-    - name: fit_predict
-      href: crowdkit.aggregation.texts.text_summarization.TextSummarization.fit_predict.md
   - name: Wawa
     items:
     - name: Overview
@@ -194,94 +88,207 @@ items:
       href: crowdkit.aggregation.classification.zero_based_skill.ZeroBasedSkill.predict.md
     - name: predict_proba
       href: crowdkit.aggregation.classification.zero_based_skill.ZeroBasedSkill.predict_proba.md
-  - name: utils
+- name: Embeddings
+  items:
+  - name: ClosestToAverage
     items:
-    - name: get_accuracy
-      href: crowdkit.aggregation.utils.get_accuracy.md
-    - name: get_most_probable_labels
-      href: crowdkit.aggregation.utils.get_most_probable_labels.md
-    - name: manage_data
-      href: crowdkit.aggregation.utils.manage_data.md
-    - name: normalize_rows
-      href: crowdkit.aggregation.utils.normalize_rows.md
-    - name: add_skills_to_data
-      href: crowdkit.aggregation.utils.add_skills_to_data.md
-    - name: named_series_attrib
-      href: crowdkit.aggregation.utils.named_series_attrib.md
+    - name: Overview
+      href: crowdkit.aggregation.embeddings.closest_to_average.ClosestToAverage.md
+    - name: fit
+      href: crowdkit.aggregation.embeddings.closest_to_average.ClosestToAverage.fit.md
+    - name: fit_predict
+      href: crowdkit.aggregation.embeddings.closest_to_average.ClosestToAverage.fit_predict.md
+    - name: fit_predict_scores
+      href: crowdkit.aggregation.embeddings.closest_to_average.ClosestToAverage.fit_predict_scores.md
+  - name: HRRASA
+    items:
+    - name: Overview
+      href: crowdkit.aggregation.embeddings.hrrasa.HRRASA.md
+    - name: fit
+      href: crowdkit.aggregation.embeddings.hrrasa.HRRASA.fit.md
+    - name: fit_predict
+      href: crowdkit.aggregation.embeddings.hrrasa.HRRASA.fit_predict.md
+    - name: fit_predict_scores
+      href: crowdkit.aggregation.embeddings.hrrasa.HRRASA.fit_predict_scores.md
+    - name: glue_similarity
+      href: crowdkit.aggregation.embeddings.hrrasa.glue_similarity.md
       hidden: true
-    - name: evaluate
-      href: crowdkit.aggregation.utils.evaluate.md
-      hidden: true
-    - name: evaluate_equal
-      href: crowdkit.aggregation.utils.evaluate_equal.md
-      hidden: true
-    - name: evaluate_in
-      href: crowdkit.aggregation.utils.evaluate_in.md
-      hidden: true
-    - name: factorize
-      href: crowdkit.aggregation.utils.factorize.md
-      hidden: true
-  - name: annotations
+  - name: RASA
+    items:
+    - name: Overview
+      href: crowdkit.aggregation.embeddings.rasa.RASA.md
+    - name: fit
+      href: crowdkit.aggregation.embeddings.rasa.RASA.fit.md
+    - name: fit_predict
+      href: crowdkit.aggregation.embeddings.rasa.RASA.fit_predict.md
+    - name: fit_predict_scores
+      href: crowdkit.aggregation.embeddings.rasa.RASA.fit_predict_scores.md
+- name: Image segmentation
+  items:
+  - name: SegmentationEM
+    items:
+    - name: Overview
+      href: crowdkit.aggregation.image_segmentation.segmentation_em.SegmentationEM.md
+    - name: fit
+      href: crowdkit.aggregation.image_segmentation.segmentation_em.SegmentationEM.fit.md
+    - name: fit_predict
+      href: crowdkit.aggregation.image_segmentation.segmentation_em.SegmentationEM.fit_predict.md
+  - name: SegmentationMajorityVote
+    items:
+    - name: Overview
+      href: crowdkit.aggregation.image_segmentation.segmentation_majority_vote.SegmentationMajorityVote.md
+    - name: fit
+      href: crowdkit.aggregation.image_segmentation.segmentation_majority_vote.SegmentationMajorityVote.fit.md
+    - name: fit_predict
+      href: crowdkit.aggregation.image_segmentation.segmentation_majority_vote.SegmentationMajorityVote.fit_predict.md
+  - name: SegmentationRASA
+    items:
+    - name: Overview
+      href: crowdkit.aggregation.image_segmentation.segmentation_rasa.SegmentationRASA.md
+    - name: fit
+      href: crowdkit.aggregation.image_segmentation.segmentation_rasa.SegmentationRASA.fit.md
+    - name: fit_predict
+      href: crowdkit.aggregation.image_segmentation.segmentation_rasa.SegmentationRASA.fit_predict.md
+- name: Pairwise
+  items:
+  - name: BradleyTerry
+    items:
+    - name: Overview
+      href: crowdkit.aggregation.pairwise.bradley_terry.BradleyTerry.md
+    - name: fit
+      href: crowdkit.aggregation.pairwise.bradley_terry.BradleyTerry.fit.md
+    - name: fit_predict
+      href: crowdkit.aggregation.pairwise.bradley_terry.BradleyTerry.fit_predict.md
+  - name: NoisyBradleyTerry
+    items:
+    - name: Overview
+      href: crowdkit.aggregation.pairwise.noisy_bt.NoisyBradleyTerry.md
+    - name: fit
+      href: crowdkit.aggregation.pairwise.noisy_bt.NoisyBradleyTerry.fit.md
+    - name: fit_predict
+      href: crowdkit.aggregation.pairwise.noisy_bt.NoisyBradleyTerry.fit_predict.md
+- name: Texts
+  items:
+  - name: ROVER
+    items:
+    - name: Overview
+      href: crowdkit.aggregation.texts.rover.ROVER.md
+    - name: fit
+      href: crowdkit.aggregation.texts.rover.ROVER.fit.md
+    - name: fit_predict
+      href: crowdkit.aggregation.texts.rover.ROVER.fit_predict.md
+  - name: TextHRRASA
+    items:
+    - name: Overview
+      href: crowdkit.aggregation.texts.text_hrrasa.TextHRRASA.md
+    - name: fit_predict
+      href: crowdkit.aggregation.texts.text_hrrasa.TextHRRASA.fit_predict.md
+    - name: fit_predict_scores
+      href: crowdkit.aggregation.texts.text_hrrasa.TextHRRASA.fit_predict_scores.md
+  - name: TextRASA
+    items:
+    - name: Overview
+      href: crowdkit.aggregation.texts.text_rasa.TextRASA.md
+    - name: fit
+      href: crowdkit.aggregation.texts.text_rasa.TextRASA.fit.md
+    - name: fit_predict
+      href: crowdkit.aggregation.texts.text_rasa.TextRASA.fit_predict.md
+    - name: fit_predict_scores
+      href: crowdkit.aggregation.texts.text_rasa.TextRASA.fit_predict_scores.md
+  - name: TextSummarization
+    items:
+    - name: Overview
+      href: crowdkit.aggregation.texts.text_summarization.TextSummarization.md
+    - name: fit_predict
+      href: crowdkit.aggregation.texts.text_summarization.TextSummarization.fit_predict.md
+- name: utils
+  items:
+  - name: get_accuracy
+    href: crowdkit.aggregation.utils.get_accuracy.md
+  - name: get_most_probable_labels
+    href: crowdkit.aggregation.utils.get_most_probable_labels.md
+  - name: manage_data
+    href: crowdkit.aggregation.utils.manage_data.md
+  - name: normalize_rows
+    href: crowdkit.aggregation.utils.normalize_rows.md
+  - name: add_skills_to_data
+    href: crowdkit.aggregation.utils.add_skills_to_data.md
+  - name: named_series_attrib
+    href: crowdkit.aggregation.utils.named_series_attrib.md
     hidden: true
-    items:
-    - name: Annotation
-      href: crowdkit.aggregation.annotations.Annotation.md
-      hidden: true
-    - name: format_google_style_attribute
-      href: crowdkit.aggregation.annotations.Annotation.format_google_style_attribute.md
-      hidden: true
-    - name: format_google_style_return
-      href: crowdkit.aggregation.annotations.Annotation.format_google_style_return.md
-      hidden: true
-    - name: manage_docstring
-      href: crowdkit.aggregation.annotations.manage_docstring.md
-      hidden: true
-  - name: base
+  - name: evaluate
+    href: crowdkit.aggregation.utils.evaluate.md
     hidden: true
-    items:
-    - name: BaseClassificationAggregator
-      href: crowdkit.aggregation.base.BaseClassificationAggregator.md
-      hidden: true
-    - name: fit
-      href: crowdkit.aggregation.base.BaseClassificationAggregator.fit.md
-      hidden: true
-    - name: fit_predict
-      href: crowdkit.aggregation.base.BaseClassificationAggregator.fit_predict.md
-      hidden: true
-    - name: BaseEmbeddingsAggregator
-      href: crowdkit.aggregation.base.BaseEmbeddingsAggregator.md
-      hidden: true
-    - name: fit
-      href: crowdkit.aggregation.base.BaseEmbeddingsAggregator.fit.md
-      hidden: true
-    - name: fit_predict
-      href: crowdkit.aggregation.base.BaseEmbeddingsAggregator.fit_predict.md
-      hidden: true
-    - name: BaseImageSegmentationAggregator
-      href: crowdkit.aggregation.base.BaseImageSegmentationAggregator.md
-      hidden: true
-    - name: fit
-      href: crowdkit.aggregation.base.BaseImageSegmentationAggregator.fit.md
-      hidden: true
-    - name: fit_predict
-      href: crowdkit.aggregation.base.BaseImageSegmentationAggregator.fit_predict.md
-      hidden: true
-    - name: BasePairwiseAggregator
-      href: crowdkit.aggregation.base.BasePairwiseAggregator.md
-      hidden: true
-    - name: fit
-      href: crowdkit.aggregation.base.BasePairwiseAggregator.fit.md
-      hidden: true
-    - name: fit_predict
-      href: crowdkit.aggregation.base.BasePairwiseAggregator.fit_predict.md
-      hidden: true
-    - name: BaseTextsAggregator
-      href: crowdkit.aggregation.base.BaseTextsAggregator.md
-      hidden: true
-    - name: fit
-      href: crowdkit.aggregation.base.BaseTextsAggregator.fit.md
-      hidden: true
-    - name: fit_predict
-      href: crowdkit.aggregation.base.BaseTextsAggregator.fit_predict.md
-      hidden: true
+  - name: evaluate_equal
+    href: crowdkit.aggregation.utils.evaluate_equal.md
+    hidden: true
+  - name: evaluate_in
+    href: crowdkit.aggregation.utils.evaluate_in.md
+    hidden: true
+  - name: factorize
+    href: crowdkit.aggregation.utils.factorize.md
+    hidden: true
+- name: annotations
+  hidden: true
+  items:
+  - name: Annotation
+    href: crowdkit.aggregation.annotations.Annotation.md
+    hidden: true
+  - name: format_google_style_attribute
+    href: crowdkit.aggregation.annotations.Annotation.format_google_style_attribute.md
+    hidden: true
+  - name: format_google_style_return
+    href: crowdkit.aggregation.annotations.Annotation.format_google_style_return.md
+    hidden: true
+  - name: manage_docstring
+    href: crowdkit.aggregation.annotations.manage_docstring.md
+    hidden: true
+- name: base
+  hidden: true
+  items:
+  - name: BaseClassificationAggregator
+    href: crowdkit.aggregation.base.BaseClassificationAggregator.md
+    hidden: true
+  - name: fit
+    href: crowdkit.aggregation.base.BaseClassificationAggregator.fit.md
+    hidden: true
+  - name: fit_predict
+    href: crowdkit.aggregation.base.BaseClassificationAggregator.fit_predict.md
+    hidden: true
+  - name: BaseEmbeddingsAggregator
+    href: crowdkit.aggregation.base.BaseEmbeddingsAggregator.md
+    hidden: true
+  - name: fit
+    href: crowdkit.aggregation.base.BaseEmbeddingsAggregator.fit.md
+    hidden: true
+  - name: fit_predict
+    href: crowdkit.aggregation.base.BaseEmbeddingsAggregator.fit_predict.md
+    hidden: true
+  - name: BaseImageSegmentationAggregator
+    href: crowdkit.aggregation.base.BaseImageSegmentationAggregator.md
+    hidden: true
+  - name: fit
+    href: crowdkit.aggregation.base.BaseImageSegmentationAggregator.fit.md
+    hidden: true
+  - name: fit_predict
+    href: crowdkit.aggregation.base.BaseImageSegmentationAggregator.fit_predict.md
+    hidden: true
+  - name: BasePairwiseAggregator
+    href: crowdkit.aggregation.base.BasePairwiseAggregator.md
+    hidden: true
+  - name: fit
+    href: crowdkit.aggregation.base.BasePairwiseAggregator.fit.md
+    hidden: true
+  - name: fit_predict
+    href: crowdkit.aggregation.base.BasePairwiseAggregator.fit_predict.md
+    hidden: true
+  - name: BaseTextsAggregator
+    href: crowdkit.aggregation.base.BaseTextsAggregator.md
+    hidden: true
+  - name: fit
+    href: crowdkit.aggregation.base.BaseTextsAggregator.fit.md
+    hidden: true
+  - name: fit_predict
+    href: crowdkit.aggregation.base.BaseTextsAggregator.fit_predict.md
+    hidden: true
 base: en
