--- a/en/crowd-kit/toc.yaml
+++ b/en/crowd-kit/toc.yaml
@@ -3,7 +3,7 @@ href: index.md
 items:
   - name: Overview
     href: index.md
-  - name: Reference
+  - name: Aggregations
     expanded: true
     include:
       path: reference/toc.yaml
