--- a/ru/toloka-apps/toc.yaml
+++ b/ru/toloka-apps/toc.yaml
@@ -46,38 +46,42 @@ items:
             name: API Toloka Apps external
           - name: app
             items:
-              - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/app/apps_get.html
-                name: Получить список шаблонов Апп-проектов (Apps)
               - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/app/apps_app_id_get.html
                 name: Информация о шаблоне Апп-проекта
+              - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/app/apps_get.html
+                name: Получить список шаблонов Ready-to-go-проектов (Apps)
           - name: app-project
             items:
               - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/app-project/app-projects_app_project_id_archive_post.html
                 name: Архивировать проект
-              - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/app-project/app-projects_post.html
-                name: Создать новый проект
-              - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/app-project/app-projects_get.html
-                name: Получить список проектов
               - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/app-project/app-projects_app_project_id_get.html
                 name: Получить информацию о проекте
+              - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/app-project/app-projects_get.html
+                name: Получить список проектов
               - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/app-project/app-projects_app_project_id_unarchive_post.html
                 name: Разархивировать проект
+              - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/app-project/app-projects_post.html
+                name: Создать новый проект
           - name: batch
             items:
-              - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/batch/app-projects_app_project_id_batches_batch_id_get.html
-                name: Получить информацию о пакете данных
-              - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/batch/app-projects_app_project_id_batches_post.html
-                name: Создать новый пакет данных с первой пачкой элементов
-              - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/batch/app-projects_app_project_id_batches_get.html
-                name: Получить список пакетов данных в проекте
+              - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/batch/app-projects_app_project_id_batches_batch_id_resume_post.html
+                name: Возобновить обработку пакета данных
               - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/batch/app-projects_app_project_id_batches_batch_id_start_post.html
                 name: Запустить обработку пакета данных
+              - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/batch/app-projects_app_project_id_batches_batch_id_stop_post.html
+                name: Остановить обработку пакета данных
+              - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/batch/app-projects_app_project_id_batches_batch_id_get.html
+                name: Получить информацию о пакете данных
+              - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/batch/app-projects_app_project_id_batches_get.html
+                name: Получить список пакетов данных в проекте
+              - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/batch/app-projects_app_project_id_batches_post.html
+                name: Создать новый пакет данных с первой пачкой элементов
           - name: item
             items:
-              - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/item/app-projects_app_project_id_items_post.html
-                name: Добавить новый элемент в пакет данных
               - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/item/app-projects_app_project_id_items_bulk_post.html
                 name: Добавить несколько элементов в пакет данных
+              - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/item/app-projects_app_project_id_items_post.html
+                name: Добавить новый элемент в пакет данных
               - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/item/app-projects_app_project_id_items_item_id_get.html
                 name: Получить информацию об элементе разметки
               - href: https://toloka.ai/ru/docs/toloka-apps/api/ref/item/app-projects_app_project_id_items_get.html
