--- a/ru/toloka-apps/toc.yaml
+++ b/ru/toloka-apps/toc.yaml
@@ -5,7 +5,7 @@ items:
     expanded: true
     items:
       - href: concepts/index.md
-        name: О сервисе
+        name: Ready-to-go
       - href: concepts/details.md
         name: Как устроен сервис
       - href: concepts/unwanted.md
