--- a/ru/template-builder/presets.yaml
+++ b/ru/template-builder/presets.yaml
@@ -14,7 +14,7 @@ default:
   toloka-requester-index-dita: 'https://toloka.ai/docs/guide/index.html?lang=en'
   toloka-requester-concepts-yacloud-dita: 'https://toloka.ai/docs/guide/concepts/use-object-storage.html?lang=en'
   toloka-requester-create-tsv: 'https://toloka.ai/docs/guide/concepts/pool_csv.html?lang=en'
-  template-builder: 'https://clck.ru/SMCHv'
+  template-builder: 'https://tb.yandex.net/editor'
   toloka-facebook: 'https://www.facebook.com/tolokaglobal/'
   toloka-slack: >-
     https://join.slack.com/t/tolokacommunity/shared_invite/zt-sxr745fr-dvfZffzvQTwNXOE0gEqysg
