--- a/ru/template-builder/presets.yaml
+++ b/ru/template-builder/presets.yaml
@@ -22,7 +22,7 @@ default:
   toloka-linkedin: 'https://www.linkedin.com/company/toloka/'
   toloka-twitter: 'https://twitter.com/TolokaAI'
   toloka-github: 'https://github.com/toloka'
-  toloka-blog: 'https://yandex.ru/blog/toloka'
+  toloka-blog: 'https://toloka.ai/blog/'
   toloka-stackoverflow: 'https://stackoverflow.com/questions/tagged/toloka'
   ui_labs_add_items-add: Добавить элементы разметки
   ui_labs_add_items-added: Элементы разметки добавлены в пакет данных
@@ -3743,7 +3743,7 @@ default:
   ui_requester_requester_help__telegram_chat: Чат поддержки в Telegram
   ui_requester_requester_help__telegram_chat_link: https://t.me/joinchat/JFLdm1DfOvLUHU2D8VWPYQ
   ui_requester_requester_help_blog_label: Блог Толоки
-  ui_requester_requester_help_blog_link: https://yandex.ru/blog/toloka
+  ui_requester_requester_help_blog_link: https://toloka.ai/blog/
   ui_requester_requester_help_training_label: Курс по краудсорсингу
   ui_requester_requester_help_training_link: https://toloka.ai/academy/self-study-guide
   ui_requester_requesters__table__balance__title: Баланс
