--- a/en/crowd-kit/toc.yaml
+++ b/en/crowd-kit/toc.yaml
@@ -1,6 +1,9 @@
 title: Crowd-Kit Documentation
 href: index.md
 items:
+  - href: ../python-sdk.md
+    name: Python SDK
+    hidden: true
   - name: Overview
     href: index.md
   - name: Aggregations
