Added API landing

--- a/ru/toloka-apps/toc.yaml
+++ b/ru/toloka-apps/toc.yaml
@@ -50,7 +50,7 @@ items:
             name: Потоковая обработка элементов разметки
       - name: Справочник API
         items:
-          - href:
+          - href: https://toloka.ai/docs/toloka-apps/api/ref/index.html
             name: API Toloka Apps external
           - name: app
             items:
