--- a/en/toloka-apps/toc.yaml
+++ b/en/toloka-apps/toc.yaml
@@ -44,9 +44,11 @@ items:
             name: Accessing the API
           - href: https://toloka.ai/docs/toloka-apps/api/concepts/quickstart-api.html
             name: API quick start
+          - href: https://toloka.ai/docs/toloka-apps/api/concepts/streaming-items.html
+            name: Stream processing of task items
       - name: API reference
         items:
-          - href:
+          - href: https://toloka.ai/docs/toloka-apps/api/ref/index.html
             name: API Toloka Apps external
           - name: app
             items:
